public interface Volador {
    void volar();
}
